--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "TOKEN": "",
-    "ID": "",
-    "HASH": "",
+    "TOKEN": "7073209983:AAGwfKBMylVGMScOlThmdXW7I-7kIx4ClGQ",
+    "ID": "21303916",
+    "HASH": "a95f38df3dc1f71b6497798a40b993ab",
     "STRING": null
 }
